--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "crons": [
     {
-        "path": "/api/cron/my-task",
+        "path": "/api/cron/daily",
         "schedule": "0 3 * * *" 
     }
     ]
